# sof

./: Kconfig.sof
lmdk/cmake/: build.cmake  config.cmake  empty.c  ldscripts.cmake  xtensa.cmake
lmdk/cmake/ldscripts/: bss_linker_script.txt  guard_linker_script.txt  rodata_linker_script.txt  text_linker_script.txt
lmdk/include/: adsp_stddef.h  audio_stream.h  buffer.h  coherent.h  common.h  component.h  component_ext.h  errno.h  loadable_processing_module.h  pipeline.h  todo.txt  up_down_mixer.h  util_macro.h
lmdk/include/coefficients/: up_down_mixer.h
lmdk/include/ipc/: control.h  header.h  msg.h
lmdk/include/ipc4/: gateway.h  up_down_mixer.h
lmdk/include/module_adapter/module/: generic.h  module_interface.h
lmdk/libraries/module_example/: CMakeLists.txt
lmdk/libraries/sample/: CMakeLists.txt
lmdk/modules/module_example2/: CMakeLists.txt
lmdk/modules/sample/: CMakeLists.txt  foo.c  module_main.c
lmdk/modules/sample2/: CMakeLists.txt  module_main.c
lmdk/modules/up_down_mixer/: CMakeLists.txt  up_down_mixer.c
loadable_modules/: readme.txt
loadable_modules/cmake/: ldscripts.cmake
loadable_modules/libraries/sample/: CMakeLists.txt  lib2.c
src/audio/mixin_mixout/: mixin_mixout.c
src/include/sof/audio/: component.h  component_ext.h
src/lib/: agent.c
src/schedule/: ll_schedule.c
